force-app/main/default/objects/DocGen_Config__mdt/DocGen_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for the Document Generation framework.</description>
    <label>DocGen Config</label>
    <pluralLabel>DocGen Configs</pluralLabel>
</CustomObject>