force-app/main/default/objects/DocGen_Config__mdt/fields/Default_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Default_Date_Format__c</fullName>
    <label>Default Date Format</label>
    <length>30</length>
    <type>Text</type>
</CustomField>