force-app/main/default/objects/DocGen_Config__mdt/fields/Max_Repeating_Rows__c.field-meta.xml
<CustomField>
    <fullName>Max_Repeating_Rows__c</fullName>
    <label>Max Repeating Rows</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>