force-app/main/default/objects/DocGen_Config__mdt/fields/Org_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Address__c</fullName>
    <label>Org Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>