force-app/main/default/objects/DocGen_Config__mdt/fields/Org_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Display_Name__c</fullName>
    <label>Org Display Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>