force-app/main/default/objects/DocGen_Config__mdt/fields/Org_EIN__c.field-meta.xml
<CustomField>
    <fullName>Org_EIN__c</fullName>
    <label>Org EIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>