force-app/main/default/objects/DocGen_Config__mdt/fields/Org_Phone__c.field-meta.xml
<CustomField>
    <fullName>Org_Phone__c</fullName>
    <label>Org Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>