force-app/main/default/objects/DocGen_Config__mdt/fields/Org_Website__c.field-meta.xml
<CustomField>
    <fullName>Org_Website__c</fullName>
    <label>Org Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>