force-app/main/default/objects/DocGen_Config__mdt/fields/PDF_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>PDF_Page_Size__c</fullName>
    <label>PDF Page Size</label>
    <length>10</length>
    <type>Text</type>
</CustomField>